# amakihi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CNN_model_utils.py  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  README.md  README.rst  amakihi.py  apphotom.py  astroalign_mod.py  background.py  crop.py  crossmatch.py  ePSF.py  g  imalign.py  loop_imdiff.py  loop_imdiff_bkgsubfirst_blind.py  loop_imdiff_blind.py  loop_transientdetect.py  masking.py  plotting.py  psfphotom.py  pyproject.toml  query_2MASS.py  query_CFIS.py  query_DECaLS.py  query_PS1.py  r  rb_dataset_utils.py  referenceims.py  satmask_test.py  setup.cfg  setup.py  (+5 more)
.github/workflows/: cd.yml  ci.yml
amakihi/: __init__.py  amakihi.py  astroalign_mod.py  background.py  ePSF.py  imalign.py  masking.py  plotting.py  query_CFIS.py  query_DECaLS.py  rb_dataset_utils.py  rb_model_utils.py  transient.py
amakihi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: amakihi.rst  astroalign_mod.rst  conf.py  ePSF.rst  index.rst  loop_imdiff.rst  loop_imdiff_bkgsubfirst_blind.rst  loop_imdiff_blind.rst  modules.rst  query_2MASS.rst  query_CFIS.rst  query_DECaLS.rst  query_PS1.rst  rb_dataset_utils.rst  rb_model_utils.rst  requirements.txt  templates.rst  transient.rst
docs/_build/doctrees/: CNN_model_utils.doctree  amakihi.doctree  astroalign_mod.doctree  background.doctree  crop.doctree  crossmatch.doctree  ePSF.doctree  environment.pickle  imalign.doctree  index.doctree  loop_imdiff.doctree  loop_imdiff_bkgsubfirst_blind.doctree  loop_imdiff_blind.doctree  masking.doctree  modules.doctree  plotting.doctree  query_2MASS.doctree  query_CFIS.doctree  query_DECaLS.doctree  query_PS1.doctree  readme.doctree  (+7 more)
tests/: test_import.py
(+48 files in other folders)
